--- a/src/footer.html
+++ b/src/footer.html
@@ -12,20 +12,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
 
-		<link href="./css/footer.css" rel="stylesheet" />
+    <link href="./footer.css" rel="stylesheet" />
 
-</head>	
+</head>
 
-	<!-- Rodapé -->
-		<footer id = "Footer" >
-	
-		<!-- Conteúdo do rodapé -->
-			<p>Copyright © 2002
-				<a href="http://www.conselhodosdetetivesdobrasil.org/" target="_blank">
-					www.conselhodosdetetivesdobrasil.org
-				</a>
-				Todos os direitos reservados.
-				<p>Leia a política de privacidade do Conselho dos Detetives do Brasil.</p>
-			</p>
+<!-- Rodapé -->
+<footer id="Footer">
 
-    </footer>
+    <!-- Conteúdo do rodapé -->
+    <p>Copyright © 2002
+        <a href="http://www.conselhodosdetetivesdobrasil.org/" target="_blank">
+			www.conselhodosdetetivesdobrasil.org
+        </a> Todos os direitos reservados.</br>
+        Leia a política de privacidade do Conselho dos Detetives do Brasil.
+    </p>
+
+</footer>
