--- a/src/registro.html
+++ b/src/registro.html
@@ -143,7 +143,7 @@
                 </p>
 
             <!-- Submeter -->
-                <button type="submit" id="button">Enviar</button>
+                <button type="submit" id="button">ENVIARr</button>
 
             </form>
         </div>
