Código de Ética do Detetive

--- a/src/registro.html
+++ b/src/registro.html
@@ -93,7 +93,7 @@
                     Certidões Negativas de Crime da Polícia Federal, Justiça Federal e Justiça Militar do Estado e da União;
                 </li>
                 <li>
-                    Certidões Negativa de Crime da Justiça Estadual, Civil e Criminal;
+                    Certidões Negativas de Crime da Justiça Estadual, Civil e Criminal;
                 </li>
                 <li>Comprovante de endereço;</li>
                 <li>
@@ -166,7 +166,7 @@
               name="fullname"
               size="15"
               maxlength="50"
-              placeholder="Digite seu nome completo aqui"
+              placeholder="Qual o seu nome completo?*"
               required
               autofocus
             />
@@ -179,7 +179,7 @@
               type="email"
               name="email"
               id="email_id"
-              placeholder="Digite seu email aqui"
+              placeholder="E o seu email? *"
               required
               autofocus
             />
@@ -205,7 +205,7 @@
             <textarea
               id="mensagem"
               name="mensagem"
-              cols="20"
+              cols="10"
               rows="20"
               placeholder="Como podemos te ajudar? Deixe sua mensagem..."
               required
